# joflux

./: .gitignore  .yamllint  Makefile  README.md  joflux.toml.example  pyproject.toml
.github/: dependabot.yml  release-drafter.yml
.github/assets/website/: capture.mjs  index.html  main.js  package-lock.json  package.json  style.css
.github/assets/website/scripts/: check.mjs
.github/workflows/: automated-release.yml  build-and-validate.yml  deploy-pages-site.yml  publish-homebrew-formula.yml  release-assets.yml  release-drafter.yml
docs/: configuration.md  release.md  usage.md
scripts/release/: generate-release-notes.sh  next-release.sh  wait-for-tag-workflow-runs.sh
src/joflux/: __init__.py  cli.py  config.py  forgejo.py  github.py  http.py  logging.py  state.py
tests/: __init__.py  test_cli.py  test_config.py  test_forgejo.py  test_state.py
